/*
 * UCF COP3330 Summer 2021
 * Copyright 2021 Harry Hocker
 */

package lecture.week5;


import java.util.ArrayList;
import java.util.List;

public class Assignment {


	List<Student> students;

	public Assignment() {
		students = new ArrayList<>();
	}

	public void addStudent(Student newStudent) {

		students.add(newStudent);
	}

	public void addStudent(String studentID) {
		
	}


}
